@@ -2,7 +2,6 @@
 
 
 <project name="TripleA" basedir="." default="compile">
-<!--<project name="TripleA" basedir="." default="release">-->
 
 	<property file=".ant.properties" />
 
